# 17th-BBForum

./: .env.example  .pre-commit-config.yaml  Aa19901229a  Aa19901229a.pub  README.md  makefile  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  twii.py
articles/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
articles/form/: article_form.py
articles/forms/: __init__.py  article_form.py
articles/migrations/: 0001_initial.py  0002_rename_userid_article_user.py  0003_comment.py  0004_alter_comment_article.py  0005_article_collectors_comment_collectors.py  0005_article_liked.py  0006_alter_article_collectors.py  0006_industrytag_article_tags_article_stock.py  0007_article_created_at.py  0007_merge_20240912_1628.py  0008_alter_article_created_at.py  0008_remove_comment_collectors.py  0009_alter_article_collectors.py  0009_profile.py  0010_alter_article_collectors.py  0010_profile_points_profile_user.py  0011_delete_profile.py  (+6 more)
batch/: twse_industry_data.py
core/: settings.py  urls.py
follows/: apps.py  models.py  serializer.py  urls.py  views.py
members/: admin.py  apps.py  models.py  signals.py  tests.py  urls.py  views.py
pages/: apps.py  urls.py  views.py
picks/: apps.py  models.py  serializer.py  urls.py  views.py
points/: apps.py  context_processors.py  models.py  signals.py  urls.py  views.py
populars/: apps.py  urls.py  views.py
stockpages/: apps.py  stockdash.py  urls.py  views.py
userprofiles/: apps.py  choice.py  forms.py  models.py  urls.py  views.py
users/: app.py  apps.py  auth_backends.py  choice.py  context_processors.py  forms.py  managers.py  middleware.py  models.py  urls.py  views.py
(+190 files in other folders)
