[tool.poetry]
name = "17th-bbforum"
version = "0.0.1"
description = ""
authors = ["17th-bbforum"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg2 = "^2.9.9"
social-auth-app-django = "^5.4.2"
django-environ = "^0.11.2"
django-anymail = {extras = ["mailgun"], version = "^11.1"}
pillow = "^10.4.0"
django-taggit = "^6.0.0"
django-pandas = "^0.6.7"
schedule = "^1.2.2"
bs4 = "^0.0.2"
sqlalchemy = "^2.0.34"
djangorestframework = "^3.15.2"
dash = "^2.18.1"
dash-daq = "^0.5.0"
plotly = "^5.24.1"
yfinance = "^0.2.43"
boto3 = "^1.35.19"
django-storages = "^1.14.4"
gunicorn = "^23.0.0"
django-heroku = "^0.3.1"
setuptools = "^75.1.0"

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
pre-commit = "^3.8.0"
python-dotenv = "^1.0.1"
commitizen = "^3.29.0"
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"